Fixing score font color to black to be visible

--- a/trunk/frontend/html/feats/breaking/include/css/coordinator.scss
+++ b/trunk/frontend/html/feats/breaking/include/css/coordinator.scss
@@ -98,7 +98,7 @@ html, body {
 	line-height: 14pt;
 	margin-left: 5%;
 	text-align: right;
-	color: white;
+	color: black;
 }
 
 .active {
